Card position small fixes

--- a/src/components/Global/CardPosition/index.scss
+++ b/src/components/Global/CardPosition/index.scss
@@ -90,6 +90,7 @@
 
   @media screen and (max-width: 991px) and (min-width: 768px) {
     background-position: 100%;
+    min-height: 400px;
   }
 
   &.small {
